299 - Trim AnalyzedRelation to minimum